# aiointernal

./: README.md  pyproject.toml
examples/: aioduktape.py
requirements/: examples.txt  test.txt
src/aiointernal/: __init__.py
tests/: conftest.py  test_thread.py
