[project]
name = "aiointernal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Vizonex", email = "VizonexBusiness@gmail.com" }
]
requires-python = ">=3.09"
dependencies = [
    "aiologic>=0.14.0",
    "culsans>=0.9.0",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
